--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-PvTrace - Local copy of PvTrace from Daniel Farrel to model LSC-based flow reactor
+PvTrace; Local copy of Daniel Farrel simulation program
