--- a/data/reactors/chong_green_10x10x0.4cm.ini
+++ b/data/reactors/chong_green_10x10x0.4cm.ini
@@ -1,4 +1,4 @@
-[Main]
+0[Main]
 name = Chong_green_10x10x0.4
 description = 10x10cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) single channel in the center
 
