add the number of solar photons escaping from edges

--- a/data/reactors/10x10_chong_thickness0.4cm.ini
+++ b/data/reactors/10x10_chong_thickness0.4cm.ini
@@ -1,6 +1,6 @@
 0[Main]
-name = Chong_green_10x10x0.4
-description = 10x10cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) single channel in the center
+name = 10x10_chong_thickness0.4cm
+description = 10x10cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) four channels
 
 [LSC]
 thickness = 0.004
