--- a/data/reactors/20x20_chong_thickness0.4cm.ini
+++ b/data/reactors/20x20_chong_thickness0.4cm.ini
@@ -1,5 +1,5 @@
 [Main]
-name = Chong_green_20x20x0.4
+name = 20x20_chong_thickness0.4cm
 description = 20x20cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) eight channels
 
 [LSC]
