--- a/data/reactors/30x30_chong_thickness0.4cm.ini
+++ b/data/reactors/30x30_chong_thickness0.4cm.ini
@@ -1,6 +1,6 @@
 [Main]
-name = Chong_green_30x30x0.4
-description = 20x20cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) eight channels
+name = 30x30_chong_thickness0.4cm
+description = 30x30cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) twelve channels
 
 [LSC]
 thickness = 0.004
