--- a/data/reactors/10x10_chong_thickness0.3cm.ini
+++ b/data/reactors/10x10_chong_thickness0.3cm.ini
@@ -1,5 +1,5 @@
 [Main]
-name = Chong_red_10x10x0.3
+name = 10x10_chong_thickness0.3cm
 description = 10x10cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) four channels
 
 [LSC]
