add new photocatalyst Rose Bengal

--- a/data/reactors/10x10_chong_thickness0.4cm.ini
+++ b/data/reactors/10x10_chong_thickness0.4cm.ini
@@ -1,4 +1,4 @@
-0[Main]
+[Main]
 name = 10x10_chong_thickness0.4cm
 description = 10x10cm square LSC with apt tubing PFA high purity(0.75 mm ID 1/16" OD) four channels
 
