--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          conda install -c conda-forge Rtree
+          conda install Rtree
           python -m pip install --upgrade pip
       - name: Install pvtrace
         shell: bash -l {0}
